tests/baselines/reference/parserUnaryExpression7.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Expressions/parserUnaryExpression7.ts (2 errors) ====
    ++ new Foo();
       ~~~~~~~~~
!!! error TS2357: The operand of an increment or decrement operator must be a variable, property or indexer.
           ~~~
!!! error TS2304: Cannot find name 'Foo'.